--- a/desafio02-ciclo01/desafio02-ciclo01.css
+++ b/desafio02-ciclo01/desafio02-ciclo01.css
@@ -56,7 +56,7 @@ header {
 
 main {
     width: 100%;
-    height: 0px;
+    height: auto;
     background-color: var(--cor-de-fonte);
     top: -10px;
     right: -46%;
@@ -67,7 +67,7 @@ main {
     height: auto;
     padding: 10px;
     display: block;
-    margin-top: 5px;
+    margin-top: -40px;
 }
 
 label {
